tests/baselines/reference/reexportedMissingAlias.errors.txt
second.d.ts(2,27): error TS2304: Cannot find name 'CompletelyMissing'.
second.d.ts(2,27): error TS2503: Cannot find namespace 'CompletelyMissing'.


==== second.d.ts (2 errors) ====
    // Fixes #15094
    export import Component = CompletelyMissing;
                              ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CompletelyMissing'.
                              ~~~~~~~~~~~~~~~~~
!!! error TS2503: Cannot find namespace 'CompletelyMissing'.
==== first.d.ts (0 errors) ====
    import * as Second from './second';
    export = Second;
==== crash.ts (0 errors) ====
    import { Component } from './first';
    class C extends Component { }
    